--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "askcmd_cli",
   "version": "1.0.0",
+  "description": "AI-powered CLI assistant for command-line queries using Google's Gemini AI",
   "main": "index.js",
   "bin": {
     "askcmd": "./index.js"
@@ -9,10 +10,17 @@
   "scripts": {
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "cli",
+    "ai",
+    "assistant",
+    "command-line",
+    "terminal",
+    "gemini",
+    "google-ai"
+  ],
+  "author": "Pranav Patil",
+  "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "chalk": "^5.3.0",
@@ -24,5 +32,16 @@
   },
   "devDependencies": {
     "jest": "^29.7.0"
-  }
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/21prnv/askcmd"
+  },
+  "bugs": {
+    "url": "https://github.com/21prnv/askcmd/issues"
+  },
+  "homepage": "https://github.com/21prnv/askcmd"
 }
