--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "askcmd_cli",
-  "version": "1.0.1",
+  "version": "1.0.1+1",
   "description": "AI-powered CLI assistant for command-line queries using Google's Gemini AI",
   "main": "index.js",
   "bin": {
